Wallet fixes Trader fixes