@@ -24,7 +24,7 @@ public class Wallet {
     public Wallet() {
         Amount   = 0.0d;
         Level    = 1;
-        Capacity = Level * 500;
+        Capacity = Level * 500d;
         Body     = new Item("Кошелёк", Amount + " Алеф\nВместимость: " + Level, Material.BOOK, 1, walletDataModel);
 
         Body.setInteger2Container(1, "wallet");
@@ -35,9 +35,9 @@ public class Wallet {
      * @param wallet Wallet itemStack
      */
     public Wallet(ItemStack wallet) {
-        Amount   = Double.parseDouble(wallet.getLoreLines().get(0).split(" ")[0]);
+        Amount   = Double.parseDouble(wallet.getLoreLines().getFirst().split(" ")[0]);
         Level    = Integer.parseInt(wallet.getLoreLines().get(1).split(" ")[1]);
-        Capacity = Level * 500;
+        Capacity = Level * 500d;
         Body     = wallet;
 
         Body.setInteger2Container(1, "wallet");
